--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>II Concurso en Tecnología Educativa, Innovación y Robótica</title>
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="estilos.css">
 </head>
 <body>
 
@@ -151,3 +151,4 @@
 
 </body>
 </html>
+
