--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <a href="#redes">Redes</a>
     </nav>
     <h1>II Concurso en Tecnología Educativa, Innovación y Robótica</h1>
-    <p>Facultad de Ciencias de la Educación · Universidad del Magdalena</p>
+    <h1>Facultad de Ciencias de la Educación · Universidad del Magdalena</h1>
   </header>
 
   <main>
@@ -151,4 +151,5 @@
 
 </body>
 </html>
+
 
